--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2",
+    "winston": "^3.5.1",
     "xlsx": "^0.17.4"
   }
 }
